Patch Notes - David - 9/28/2017
Added Features:
1. Added username above player charecter
2. Added username above opponent player
3. Increased client side FPS to 60 from 30

Removed Features:
1. Removed the gridlines on the canvas, will possibly replace in future.

Bug Fixes:
1. Fixed world border issue where player would get stuck on wall after continuously moving into it
2. Fixed issue where header and footer of site would stay after clicking join game

Known Bugs:
1. After moving left or right, when you attempt to move up or down, it will go down or up respectively in the
direction (left or right) that was last pressed

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -11,7 +11,13 @@
 </head>
 
 <body>
-<div class="site-wrapper">
+
+<div id="game">
+    <canvas id="gameCanvas" width="700" height="400" style="border:1px solid #000000; display: none">
+
+    </canvas>
+</div>
+<div id="site_wrapper" class="site-wrapper">
     <div class="site-wrapper-inner">
         <div class="cover-container">
 
@@ -27,7 +33,7 @@
                 </div>
             </div>
 
-            <div class="inner cover">
+            <div id="inner_cover" class="inner cover">
                 <h1 id="login_text" class="cover-heading">Enter Username</h1>
                 <div id="form" class="form-control">
                     <div id="input">
@@ -41,11 +47,6 @@
                 <p class="lead">
                     <button id="logon" class="btn btn-lg btn-secondary">Join</button>
                 </p>
-                <div id="game">
-                    <canvas id="gameCanvas" width="700" height="400" style="border:1px solid #000000; display: none">
-
-                    </canvas>
-                </div>
             </div>
 
             <div class="mastfoot">
@@ -56,6 +57,7 @@
         </div>
     </div>
 </div>
+
 
 <script src="./collections/Point.js"></script>
 <script src="./collections/Set.js"></script>
@@ -82,6 +84,8 @@
     var game_canvas = document.getElementById('gameCanvas');
     var login_block = document.getElementById('form');
     var login_text = document.getElementById('login_text');
+    var inner_cover = document.getElementById('inner_cover');
+    var site_wrapper = document.getElementById('site_wrapper');
 
     logon.addEventListener('click', function () {
         message.innerHTML = 'Join Button Clicked';
@@ -92,13 +96,21 @@
         var game = new JoinGame(username.value, game_canvas);
         game.join();
 
-        logon.style.display = 'none';
-        username.style.display = 'none';
-        login_block.style.display = 'none';
-        login_text.style.display = 'none';
-        game_canvas.style.display = 'block';
+        //logon.style.display = 'none';
+        //username.style.display = 'none';
+        //login_block.style.display = 'none';
+        //login_text.style.display = 'none';
+        //inner_cover.style.display = 'none';
+        site_wrapper.style.display = 'none';
+        game_canvas.style.display = 'inherit';
+
 
     });
+
+
+    function componet() {
+
+    }
 </script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
