Improvements to movement feel. JoinGame: Server sends initial player list on join. Server sends messages to all clients when they join or leave. All messages to/from server/client are preceeded with the name of the class they represent. Server does some checks for bad messages from people trying to fuck with us.

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -66,6 +66,8 @@
 <script src="./networked/ServerPlayerUpdate.js"></script>
 <script src="./networked/ServerUsernameRequestStatus.js"></script>
 <script src="./networked/UsernameChangeRequest.js"></script>
+<script src="./networked/PlayerListChange.js"></script>
+<script src="./networked/InitialPlayerList.js"></script>
 <script src="./Renderable.js"></script>
 <script src="./Player.js"></script>
 <script src="./Updateable.js"></script>
