Bullets In Progress

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -58,9 +58,9 @@
     </div>
 </div>
 
-
 <script src="./collections/Point.js"></script>
 <script src="./collections/Set.js"></script>
+<script src="./networked/BulletInfo.js"></script>
 <script src="./networked/InitialServerJoinState.js"></script>
 <script src="./networked/InputStateChange.js"></script>
 <script src="./networked/ServerPlayerUpdate.js"></script>
@@ -69,9 +69,10 @@
 <script src="./networked/PlayerListChange.js"></script>
 <script src="./networked/InitialPlayerList.js"></script>
 <script src="./Renderable.js"></script>
-<script src="./Player.js"></script>
 <script src="./Updateable.js"></script>
+<script src="./Player.js"></script>
 <script src="./GameEntity.js"></script>
+<script src="./Bullet.js"></script>
 <script src="./ClientPlayer.js"></script>
 <script src="./GameBackground.js"></script>
 <script src="./OpponentPlayer.js"></script>
