Finished implementing bullets (Testing needed) - Player collision with other player's bullets causes damage and removes the bullet - Client health of 0 will trigger the client to disconnect from the server - When player health reaches 0, bullets should despawn and player should despawn

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -60,6 +60,7 @@
 
 <script src="./collections/Point.js"></script>
 <script src="./collections/Set.js"></script>
+<script src="./networked/PointsUpdate.js"></script>
 <script src="./networked/BulletInfo.js"></script>
 <script src="./networked/InitialServerJoinState.js"></script>
 <script src="./networked/ClientInputStateUpdate.js"></script>
@@ -68,6 +69,7 @@
 <script src="./networked/UsernameChangeRequest.js"></script>
 <script src="./networked/PlayerListChange.js"></script>
 <script src="./networked/InitialPlayerList.js"></script>
+<script src="./networked/PlayerHealthMessage.js"></script>
 <script src="./Renderable.js"></script>
 <script src="./Updateable.js"></script>
 <script src="./Player.js"></script>
