Have the client send a PING message to the server once every second. Have the server forward that message back to the client without any modification. Have client determine the 1-way network latency between itself and the server. Coded, tested, and verified.

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -80,6 +80,7 @@
 <script src="./OpponentPlayer.js"></script>
 <script src="./Renderer.js"></script>
 <script src="./SimpleRenderer.js"></script>
+<script src="./LagCompensator.js"></script>
 <script src="./GameClient.js"></script>
 <script src="./JoinGame.js"></script>
 <script>
