Add NPC networking infrastructure. Add NPC base class. Add client-side NPC base class. Slight code cleanup.
TODO:
Create NPCPlayerCollisionDetector PhysicsFilter
Create NPCBulletCollisionDetector PhysicsFilter
Register the above two physics filters to the NPC base class.
Create first NPC type

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -62,6 +62,7 @@
 <script src="./collections/Set.js"></script>
 <script src="./networked/PointsUpdate.js"></script>
 <script src="./networked/BulletInfo.js"></script>
+<script src="./networked/NpcInfo.js"></script>
 <script src="./networked/InitialServerJoinState.js"></script>
 <script src="./networked/ClientInputStateUpdate.js"></script>
 <script src="./networked/ServerPlayerUpdate.js"></script>
@@ -74,6 +75,7 @@
 <script src="./Updateable.js"></script>
 <script src="./Player.js"></script>
 <script src="./GameEntity.js"></script>
+<script src="./Npc.js"></script>
 <script src="./Bullet.js"></script>
 <script src="./ClientPlayer.js"></script>
 <script src="./GameBackground.js"></script>
