This commit includes changes to the NPC system including completion of the underlying NPC code. Additional changes: - Created first NPC type - Created NPC collision handler - Created NPC spawning scheduler - Code improvements to physics filter classes - Created event/listener system for certain world changes (for now just entity added/removed from world) - NPCs add players points on death - Collision with NPC causes player damage - NPC Collision with bullets causes NPC damage and destroys the bullet.
Only TODO: Send initial NPC list to client upon joining game

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -76,6 +76,7 @@
 <script src="./Player.js"></script>
 <script src="./GameEntity.js"></script>
 <script src="./Npc.js"></script>
+<script src="./InfectedNpc.js"></script>
 <script src="./Bullet.js"></script>
 <script src="./ClientPlayer.js"></script>
 <script src="./GameBackground.js"></script>
