Create 2nd npc type. The virus npc, which spawns from dead infected npcs. Still incomplete on the client-side, but server side logic is complete. Server-side logic also needs to be tested, so it might not actually be complete.

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -77,6 +77,7 @@
 <script src="./GameEntity.js"></script>
 <script src="./Npc.js"></script>
 <script src="./InfectedNpc.js"></script>
+<script src="./VirusNpc.js"></script>
 <script src="./Bullet.js"></script>
 <script src="./ClientPlayer.js"></script>
 <script src="./GameBackground.js"></script>
