--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -60,6 +60,7 @@
 
 <script src="./collections/Point.js"></script>
 <script src="./collections/Set.js"></script>
+<script src="./resource/Downloader.js"/>
 <script src="./networked/PointsUpdate.js"></script>
 <script src="./networked/BulletInfo.js"></script>
 <script src="./networked/NpcInfo.js"></script>
@@ -88,6 +89,7 @@
 <script src="./GameClient.js"></script>
 <script src="./JoinGame.js"></script>
 <script>
+    //Downloader.getResources();
     var logon = document.getElementById('logon');
     var username = document.getElementById('username');
     var message = document.getElementById('join_message');
