GameUI update, fucking javascript

--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -85,6 +85,7 @@
 <script src="./Renderer.js"></script>
 <script src="./SimpleRenderer.js"></script>
 <script src="./LagCompensator.js"></script>
+<script src="./GameUI.js"></script>
 <script src="./GameClient.js"></script>
 <script src="./JoinGame.js"></script>
 <script>
