--- a/game-frontend/src/site/html/index.html
+++ b/game-frontend/src/site/html/index.html
@@ -71,6 +71,7 @@
 <script src="./networked/PlayerListChange.js"></script>
 <script src="./networked/InitialPlayerList.js"></script>
 <script src="./networked/PlayerHealthMessage.js"></script>
+<script src="./networked/HighscoreInfo.js"></script>
 <script src="./Renderable.js"></script>
 <script src="./Updateable.js"></script>
 <script src="./Player.js"></script>
